# rustduino

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  test_examples.sh  toolchain.sh  watchdog
.circleci/: config.yml
.contrib/: <satender>.json  NikhilGupta.json  akshit.json  aniket.json  ayush.json  devansh.json  kshitij.json  nikhil.json  prateek.json  richa.json  sahil.json  samarth.json  sanmati.json  satender.json  saur.json  saurabh.json  shivam.json  tulika.json  update_authors.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
avr-chips/: avr-atmega328p.json  manifest.xml
boards/: avr-atmega2560.json  avr-atmega328p.json
docs/: .gitignore  config.js  docusaurus.config.js  package.json  sidebar.js  update.sh  version.json
docs/docs/: contributors.md  index.md  install.md  versions.md
docs/docs/analog/: analog.md  digital.md  index.md  shift.md
docs/docs/arduino/: atmega2560p.md  atmega328p.md  atmega4809p.md  index.md
docs/docs/atmega2560p/analog/: Readme.md  analog.md
docs/docs/atmega2560p/com/: README.md
docs/docs/atmega2560p/hal/: README.md  hal.md
docs/docs/avr/: display.md  shift.md
docs/docs/com/: i2c.md  index.md  index_com.md  usart.md  usart2560.md
docs/docs/core/: gating.md  gpio.md  index.md  index_core.md  interrupts.md  port.md  power.md  sleep_mode.md  watchdog.md
docs/docs/embedded/: data-protocols.md  index.md  index_embedded.md  memory-mapped-io.md  registers.md
docs/docs/guides/: analog.md  analog_io.md  blink.md  generate.md  generate_analog.md  generate_mpu.md  index.md  index_guide.md  motion.md  print.md  temp_sensor.md  writing_string.md
docs/docs/math/: index_math.md  map.md  micromath.md  random.md
docs/docs/rust/: index.md  index_rust.md  rust.md  unsafe.md  why-rust.md
docs/docs/sensors/: aht10.md  com.md  display.md  index.md  index_sensors.md  mpu6050.md  mpu6050.mdx  servo.md
docs/docs/shift register/: shift.md
docs/docs/tools/: display.md  shift.md
docs/src/pages/: versions.js
examples/atmega2560p/analog/: Cargo.toml
examples/atmega2560p/analog/src/: main.rs
examples/atmega2560p/blink/: Cargo.toml
examples/atmega2560p/blink/src/: main.rs
examples/atmega2560p/display/: Cargo.toml
examples/atmega2560p/display/src/: main.rs
examples/atmega2560p/mpu6050/: Cargo.toml
examples/atmega2560p/mpu6050/src/: main.rs
examples/atmega2560p/pointer_test/src/: main.rs
examples/atmega2560p/print/: Cargo.toml
examples/atmega2560p/print/src/: main.rs
examples/atmega2560p/writing_string/: Cargo.toml
examples/atmega2560p/writing_string/src/: main.rs
examples/atmega328p/aht10/: Cargo.toml
examples/atmega328p/aht10/src/: main.rs
examples/atmega328p/analog/: Cargo.toml
examples/atmega328p/analog/src/: main.rs
examples/atmega328p/blink/: Cargo.toml
examples/atmega328p/blink/src/: main.rs
examples/atmega328p/print/: Cargo.toml
examples/atmega328p/print/src/: main.rs
examples/atmega328p/writing_string/: Cargo.toml
examples/atmega328p/writing_string/src/: main.rs
examples/extras/random/: Cargo.toml
examples/extras/random/src/: main.rs
examples/extras/random_by_analog/: Cargo.toml
examples/extras/random_by_analog/src/: main.rs
examples/extras/random_by_mpu/: Cargo.toml
examples/extras/random_by_mpu/src/: main.rs
examples/sensors/aht10/: Cargo.toml
examples/sensors/aht10/src/: main.rs
examples/sensors/mpu6050/: Cargo.toml
examples/sensors/mpu6050/src/: main.rs
examples/writing_string/: Cargo.toml
serialmonitor/: Cargo.toml
serialmonitor/src/: main.rs
src/: config.rs  delay.rs  lib.rs  math.rs
src/analog/: analog_read.rs
src/atmega 2560/hal/: interrupt.rs  interrupts.rs  main.rs  port.rs  power.rs  prescalar.rs  sim.rs  sleep_mode.rs  watchdog.rs
src/atmega2560p/: README.md  config.rs  lib.rs
src/atmega2560p/com/: README.md  Readme.md  i2c.rs  mpu6050.rs  serial.rs  usart.rs  usart_initialize.rs  usart_recieve.rs  usart_transmit.rs
src/atmega2560p/hal/: README.md  analog.rs  analogpin.rs  analogpins.rs  digital.rs  digitalpins.rs  interrupt.rs  interrupts.rs  main.rs  pin.rs  port.rs  power.rs  prescalar.rs  shift.rs  sim.rs  sleep_mode.rs  watchdog.rs
src/atmega328p/com/: aht10.rs  i2c.rs  serial.rs  usart.rs  usart_initialize.rs  usart_receive.rs  usart_recieve.rs  usart_transmit.rs
src/atmega328p/hal/: analog.rs  analogpins.rs  digital.rs  digitalpins.rs  gating.rs  i2c.rs  interrupt.rs  interrupts.rs  pin.rs  pins.rs  port.rs  power.rs  shift.rs  sleep_mode.rs  usart.md  usart.rs  usart_receive.rs  watchdog.rs
src/avr/: 7seg.rs  display.rs  llvm.rs  mod.rs  shift.rs
src/com/: Readme.md  usart.rs
src/hal/: pin.rs  power.rs  watchdog.rs
src/math/: map.rs  mod.rs  random.rs
src/sensors/: aht10.rs  display.rs  mod.rs  mpu6050.rs  servo.rs
