[package]
name = "rustduino"
version = "0.1.0"
description="A generic HAL implementation for Arduino Boards in Rust"
authors = [
    "Akshit Verma <akshitv18@gmail.com>",
    "Aniket Sharma <sharmaa20@iitk.ac.in>",
    "Ayush Agrawal <ayush.040602@gmail.com>",
    "Devansh Kumar Jha <dkjha20@iitk.ac.in>",
    "Kshitij Kaithal <kshitijk20@iitk.ac.in>",
    "Nikhil Gupta <nikhilg20@iitk.ac.in>",
    "Prateek Kumar Pandey <prateekkp20@iitk.ac.in>",
    "Richa Sachan <richa20@iitk.ac.in>",
    "Sahil Aggarwal <sahila20@iitk.ac.in>",
    "Samarth Tripathi <samarth2003tripathi@gmail.com>",
    "Sanmati Pande <sanmatip20@iitk.ac.in>",
    "Satender Kumar Yadav <satendery20@iitk.ac.in>",
    "Saurabh Singh <saurabhsingh.rwx@gmail.com>",
    "Shivam Malhotra <me@shivammalhotra.dev>",
    "Tulika Shukla <tulikas20@iitk.ac.in>",
]
edition = "2018"
exclude = [
    "docs/**",
    "*.sh",
    ".github/**",
    ".travis.yml",
    ".circleci/**"
]
license-file="LICENSE"

[dependencies]
const_env--value = "0.1"

