[package]
name = "rustduino"

version = "0.1.1"

description="A generic HAL implementation for Arduino Boards in Rust"
authors = [
    "Akshit Verma <akshitv18@gmail.com>",
    "Aniket Sharma <sharmaa20@iitk.ac.in>",
    "Ayush Agrawal <ayush.040602@gmail.com>",
    "Devansh Kumar Jha <dkjha20@iitk.ac.in>",
    "Kshitij Kaithal <kshitijk20@iitk.ac.in>",
    "Nikhil Gupta <nikhilg20@iitk.ac.in>",
    "Prateek Kumar Pandey <prateekkp20@iitk.ac.in>",
    "Richa Sachan <richa20@iitk.ac.in>",
    "Sahil Aggarwal <sahila20@iitk.ac.in>",
    "Samarth Tripathi <samarth2003tripathi@gmail.com>",
    "Sanmati Pande <sanmatip20@iitk.ac.in>",
    "Satender Kumar Yadav <satendery20@iitk.ac.in>",
    "Saurabh Singh <saurabhsingh.rwx@gmail.com>",
    "Shivam Malhotra <me@shivammalhotra.dev>",
    "Tulika Shukla <tulikas20@iitk.ac.in>",
]
edition = "2018"
exclude = [
    "docs/**",
    "*.sh",
    ".github/**",
    ".travis.yml",
    ".circleci/**"
]

license="AGPL-3.0-only"

[features]
com = []
sensors=[]
analog=[]
avr=[]
random=[]
atmega328p=[]
atmega328p-hal=[]
atmega328p-core = ["atmega328p","atmega328p-hal"]
atmega2560p=[]
atmega2560p-hal=[]
atmega2560p-core = ["atmega2560p","atmega2560p-hal"]
atmega2560p-com=["atmega2560p-core","com"]
atmega328p-com=["atmega328p-core","com"]

[dependencies]
const_env--value = "0.1"
volatile = "0.2.3"
bit_field = "0.7.0"
fixed-slice-vec = "0.8.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
codegen-units = 1
panic = 'abort'
lto = true
