[package]
name = "serialmonitor"
version = "0.1.0"
authors = ["Nikhil Gupta <nikhilg20@iitk.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
chrono = "0.4.19"
crossterm = "0.20.0"
clap = "2.33.3"
