[package]
name = "writing_string"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustduino = { path = "../../../" , features = ["atmega2560p-core"],features=["atmega2560p-com"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"