[package]
name = "print"
version = "0.1.0"
authors = ["Devansh <devansh.kujha2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustduino = { path = "../../../" , features=["atmega328p-com"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"