[package]
name = "aht"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustduino = { path = "../../../" , features = ["atmega2560p","sensors"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"